--- a/index.html
+++ b/index.html
@@ -4,9 +4,122 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>goit-markup-hw-01</title>
   </head>
+
   <body>
-    <p>Hello World</p>
+    <header>
+      <a href="mainpage.html">WebStudio</a>
+      <nav>
+        <ul>
+          <li><a href="agency.html">Agencja</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Kontakt</a></li>
+        </ul>
+      </nav>
+
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+48111111111">+48 111 111 111</a>
+    </header>
+    <main>
+      <div>
+        <h1>
+          EFEKTYWNE ROZWIĄZANIA <br />
+          DLA WASZEGO BIZNESU
+        </h1>
+        <button type="button">Zamów usługę</button>
+      </div>
+      <div>
+        <ul>
+          <li>
+            <p>LOREM IPSUM</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <p>LOREM IPSUM</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <p>LOREM IPSUM</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <p>LOREM IPSUM</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+              arcu sem. Sed non sodales dui. Interdum et malesuada
+            </p>
+          </li>
+        </ul>
+      </div>
+      <section>
+        <h2>Czym się zajmujemy</h2>
+        <ul>
+          <li>
+            <img src="images/img.jpg" alt="image_1" width="370" height="294" />
+          </li>
+          <li>
+            <img src="images/img2.jpg" alt="image_2" width="370" height="294" />
+          </li>
+          <li>
+            <img src="images/img3.jpg" alt="image_3" width="370" height="294" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Nasz zespół</h2>
+        <ul>
+          <li>
+            <img
+              src="images/img4.jpg"
+              alt="image_4"
+              width="270"
+              height="260"
+            /><br /><span>John Doe</span><br /><span>Product Designer</span>
+          </li>
+          <li>
+            <img
+              src="images/img5.jpg"
+              alt="image_5"
+              width="270"
+              height="260"
+            /><br /><span>John Doe</span><br /><span>Frontend Developer</span>
+          </li>
+          <li>
+            <img
+              src="images/img6.jpg"
+              alt="image_6"
+              width="270"
+              height="260"
+            /><br /><span>John Doe</span><br /><span>Marketing</span>
+          </li>
+          <li>
+            <img
+              src="images/img7.jpg"
+              alt="image_7"
+              width="270"
+              height="260"
+            /><br /><span>John Doe</span><br /><span>UI Designer</span>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <address>
+        <a href="mainPage">WebStudio</a>
+        <p>m. Warszawa, Aleje Jerozolimskie 21</p>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+48111111111">+48 111 111 111</a>
+      </address>
+    </footer>
   </body>
 </html>
