--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
       <a href="tel:+48111111111">+48 111 111 111</a>
     </header>
     <main>
-      <div>
+      <section>
         <h1>
           EFEKTYWNE ROZWIĄZANIA <br />
           DLA WASZEGO BIZNESU
         </h1>
         <button type="button">Zamów usługę</button>
-      </div>
-      <div>
+      </section>
+      <section>
         <ul>
           <li>
             <p>LOREM IPSUM</p>
@@ -60,18 +60,33 @@
             </p>
           </li>
         </ul>
-      </div>
+      </section>
       <section>
         <h2>Czym się zajmujemy</h2>
         <ul>
           <li>
-            <img src="images/img.jpg" alt="image_1" width="370" height="294" />
+            <img
+              src="images/code.jpg"
+              alt="code_image"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="images/img2.jpg" alt="image_2" width="370" height="294" />
+            <img
+              src="images/develop.jpg"
+              alt="develop_image"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <img src="images/img3.jpg" alt="image_3" width="370" height="294" />
+            <img
+              src="images/design.jpg"
+              alt="design_image"
+              width="370"
+              height="294"
+            />
           </li>
         </ul>
       </section>
@@ -80,32 +95,32 @@
         <ul>
           <li>
             <img
-              src="images/img4.jpg"
-              alt="image_4"
+              src="images/productdesigner.jpg"
+              alt="productdesigner_photo"
               width="270"
               height="260"
             /><br /><span>John Doe</span><br /><span>Product Designer</span>
           </li>
           <li>
             <img
-              src="images/img5.jpg"
-              alt="image_5"
+              src="images/frontenddeveloper.jpg"
+              alt="frontenddeveloper_photo"
               width="270"
               height="260"
             /><br /><span>John Doe</span><br /><span>Frontend Developer</span>
           </li>
           <li>
             <img
-              src="images/img6.jpg"
-              alt="image_6"
+              src="images/marketing.jpg"
+              alt="marketing_photo"
               width="270"
               height="260"
             /><br /><span>John Doe</span><br /><span>Marketing</span>
           </li>
           <li>
             <img
-              src="images/img7.jpg"
-              alt="image_7"
+              src="images/uidesigner.jpg"
+              alt="uidesigner_photo"
               width="270"
               height="260"
             /><br /><span>John Doe</span><br /><span>UI Designer</span>
@@ -115,7 +130,7 @@
     </main>
     <footer>
       <address>
-        <a href="mainPage">WebStudio</a>
+        <a href="mainpage.html">WebStudio</a>
         <p>m. Warszawa, Aleje Jerozolimskie 21</p>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+48111111111">+48 111 111 111</a>
